package main.java;


public class MLresult3 {

    private final String filename;
    private final String separator;

    public MLresult3(final  String filename, final String separator) {
        super();
        this.filename = filename;
        this.separator = separator;
    }
}
