package main.java;


public enum TargetLanguage {
	
	PYTHON, 
	R, 
	JULIA

}
