@startuml

title __GENIE_LOGICIEL_CALEB_DAVID_MANSOR's Class Diagram__\n

  namespace Unit_test.java {
    class Unit_test.java.TestConfigurationML {
    }
  }
  

  namespace Unit_test.java {
    class Unit_test.java.TestExecutorBuilder {
    }
  }
  

  namespace Unit_test.java {
    class Unit_test.java.TestJuliaMLExecutor {
    }
  }
  

  namespace Unit_test.java {
    class Unit_test.java.TestPythonMLExecutor {
    }
  }
  

  namespace Unit_test.java {
    class Unit_test.java.TestRMLExecutor {
    }
  }
  

  namespace main.java {
    class main.java.Benchmarks {
    }
  }
  

  namespace main.java {
    class main.java.ConfigurationML {
    }
  }
  

  namespace main.java {
    class main.java.ExecutorBuilder {
    }
  }
  

  namespace main.java {
    class main.java.JuliaLanguageMLExecutor {
    }
  }
  

  namespace main.java {
    abstract class main.java.MLExecutor {
    }
  }
  

  namespace main.java {
    class main.java.MLResult {
    }
  }
  

  namespace main.java {
    class main.java.MLResult2 {
    }
  }
  

  namespace main.java {
    class main.java.MLresult3 {
    }
  }
  

  namespace main.java {
    class main.java.MMLMain {
    }
  }
  

  namespace main.java {
    class main.java.Main {
    }
  }
  

  namespace main.java {
    class main.java.PythonMLExecutor {
    }
  }
  

  namespace main.java {
    class main.java.RLanguageMLExecutor {
    }
  }
  

  namespace main.java {
    enum TargetLanguage {
    }
  }
  

  namespace test.java {
    class test.java.MMLPythonTest {
    }
  }
  

  main.java.ExecutorBuilder o-- main.java.MLExecutor : executor
  main.java.ExecutorBuilder o-- main.java.ConfigurationML : configuration
  main.java.JuliaLanguageMLExecutor -up-|> main.java.MLExecutor
  main.java.MLExecutor o-- main.java.ConfigurationML : configuration
  main.java.MLResult o-- main.java.ConfigurationML : configuration
  main.java.PythonMLExecutor -up-|> main.java.MLExecutor
  main.java.RLanguageMLExecutor -up-|> main.java.MLExecutor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
